--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -62,5 +62,28 @@
     "complete-how-to-play": "पूरा कैसे खेलें",
     "dont-show-again": "फिर से न दिखाएं",
     "streaming-error": "स्ट्रीमिंग त्रुटि: अमान्य स्ट्रीमिंग URL",
-    "no-promotion": "इस समय कोई आयोजन नहीं"
+    "no-promotion": "इस समय कोई आयोजन नहीं",
+
+    "features-htp": {
+        "general": {
+            "title": "सामान्य",
+            "paragraph-1": "खेल में भाग लेने के लिए, आपके पास अपनी सट्टों को कवर करने के लिए पर्याप्त बैलेंस/फंड होना चाहिए। आपका वर्तमान बैलेंस स्क्रीन के नीचे बाईं ओर देखा जा सकता है।",
+            "paragraph-2": "कुल सट्टा संकेतक वर्तमान दौर के लिए आपके द्वारा लगाए गए सट्टों की कुल राशि दिखाता है।",
+            "paragraph-3": "टेबल पर अनुमत न्यूनतम और अधिकतम सट्टों को प्रदर्शित करता है, जो किसी भी समय बदल सकते हैं। इसके अलावा, वर्तमान अवधि का अद्वितीय कोड और आप जो खेल खेल रहे हैं उसका नाम भी दिखाया जाता है।",
+            "paragraph-4": "टाइमर सट्टा लगाने के लिए शेष समय दर्शाता है। टाइमर समाप्त होने पर, सट्टा बंद हो जाता है, और कोई और सट्टा स्वीकार नहीं किया जाता। सट्टा समाप्त होने के बाद, यदि आपका सट्टा खेल के दौर के लिए स्वीकार किया जाता है, तो आपको \"सट्टा पुष्टि\" अधिसूचना मिलेगी; अन्यथा, आपको \"सभी सट्टे स्वीकार नहीं किए गए\" या \"सट्टा अस्वीकृत\" दिखाई देगा।",
+            "paragraph-5": "चिप डिस्प्ले आपको प्रत्येक चिप का मूल्य चुनने की अनुमति देता है जिसे आप दांव पर लगाना चाहते हैं। आप स्क्रीन के नीचे स्थित चिप्स पर क्लिक करके चिप मूल्यों का चयन कर सकते हैं, जो Undo, Double, और Rebet बटनों के पास स्थित हैं, ताकि सभी उपलब्ध चिप मूल्यों को देख सकें। केवल आपके वर्तमान बैलेंस के साथ संगत चिप मूल्यों का चयन किया जा सकता है।"
+        },
+        "menu": {
+            "title": "मेनू",
+            "description": "खेल के दौरान खिलाड़ियों की सहायता के लिए अतिरिक्त बटन।",
+            "paragraph-1": "Undo बटन टेबल पर आपके द्वारा रखी गई अंतिम चिप को हटा देता है।",
+            "paragraph-2": "आपके द्वारा रखी गई चिप्स के कुल मूल्य को दोगुना कर देता है। सुनिश्चित करें कि आपके खाते का बैलेंस दोगुने सट्टों को कवर करने के लिए पर्याप्त है।",
+            "paragraph-3": "आपको टेबल पर अपने पिछले दौर के समान सट्टा दोहराने की अनुमति देता है।",
+            "paragraph-4": "Burger Menu खेल में महत्वपूर्ण मेनू और सुविधाओं तक पहुंच प्रदान करता है।",
+            "paragraph-5": "आपके द्वारा टेबल पर रखी गई चिप्स को छिपाता है।",
+            "paragraph-6": "चल रहे खेल के आंकड़े प्रदर्शित करता है।",
+            "paragraph-7": "Roadmap/खेल के आंकड़े दिखाता है या छिपाता है।",
+            "paragraph-8": "प्रत्येक खिलाड़ी के पसंदीदा दांवों को सहेजने और उपयोग करने के लिए।"
+        }
+    }
 }
