--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -62,5 +62,28 @@
     "complete-how-to-play": "วิธีเล่นฉบับสมบูรณ์",
     "dont-show-again": "ไม่ต้องแสดงอีก",
     "streaming-error": "ข้อผิดพลาดในการสตรีม: URL สตรีมไม่ถูกต้อง",
-    "no-promotion": "ไม่มีกิจกรรมในขณะนี้"
+    "no-promotion": "ไม่มีกิจกรรมในขณะนี้",
+
+    "features-htp": {
+        "general": {
+            "title": "ทั่วไป",
+            "paragraph-1": "เพื่อเข้าร่วมเกม คุณต้องมีเงินคงเหลือ/กองทุนเพียงพอที่จะครอบคลุมการเดิมพันของคุณ ยอดเงินปัจจุบันของคุณสามารถดูได้ที่มุมล่างซ้ายของหน้าจอ",
+            "paragraph-2": "ตัวบ่งชี้การเดิมพันทั้งหมดแสดงจำนวนเงินเดิมพันทั้งหมดที่คุณวางสำหรับรอบปัจจุบัน",
+            "paragraph-3": "แสดงการเดิมพันขั้นต่ำและสูงสุดที่อนุญาตบนโต๊ะ ซึ่งอาจเปลี่ยนแปลงได้ตลอดเวลา นอกจากนี้ยังมีรหัสเฉพาะสำหรับรอบปัจจุบันและชื่อของเกมที่คุณกำลังเล่น",
+            "paragraph-4": "ตัวจับเวลาจะแจ้งเวลาที่เหลือในการวางเดิมพัน เมื่อตัวจับเวลาสิ้นสุดลง การเดิมพันจะปิดและไม่รับเดิมพันเพิ่มเติม หลังจากสิ้นสุดการเดิมพัน คุณจะได้รับการยืนยัน \"เดิมพันได้รับการยอมรับ\" หากเดิมพันของคุณถูกต้องสำหรับรอบเกม มิฉะนั้นคุณจะเห็น \"ไม่ใช่ทุกเดิมพันที่ได้รับการยอมรับ\" หรือ \"เดิมพันถูกปฏิเสธ\"",
+            "paragraph-5": "การแสดงชิปช่วยให้คุณเลือกมูลค่าของแต่ละชิปที่คุณต้องการเดิมพัน คุณสามารถเลือกมูลค่าชิปได้โดยคลิกที่ชิปที่ด้านล่างของหน้าจอ ซึ่งอยู่ใกล้กับปุ่มยกเลิก เพิ่มเป็นสองเท่า และวางเดิมพันซ้ำ เพื่อดูมูลค่าชิปทั้งหมดที่มีอยู่ เฉพาะมูลค่าชิปที่เข้ากันได้กับยอดเงินปัจจุบันของคุณเท่านั้นที่สามารถเลือกได้"
+        },
+        "menu": {
+            "title": "เมนู",
+            "description": "ปุ่มเพิ่มเติมเพื่อช่วยเหลือผู้เล่นในระหว่างเกม",
+            "paragraph-1": "ปุ่มยกเลิกจะลบชิปสุดท้ายที่คุณวางบนโต๊ะ",
+            "paragraph-2": "เพิ่มมูลค่ารวมของชิปที่คุณวางเป็นสองเท่า ตรวจสอบให้แน่ใจว่ายอดเงินในบัญชีของคุณเพียงพอที่จะครอบคลุมการเดิมพันที่เพิ่มเป็นสองเท่า",
+            "paragraph-3": "อนุญาตให้คุณทำซ้ำการเดิมพันเดียวกันกับรอบก่อนหน้าบนโต๊ะ",
+            "paragraph-4": "เมนูเบอร์เกอร์ให้การเข้าถึงเมนูและฟีเจอร์สำคัญในเกม",
+            "paragraph-5": "ซ่อนชิปที่คุณวางบนโต๊ะ",
+            "paragraph-6": "แสดงสถิติของเกมที่กำลังดำเนินอยู่",
+            "paragraph-7": "แสดงหรือซ่อน Roadmap/สถิติเกม",
+            "paragraph-8": "เพื่อบันทึกและใช้การเดิมพันที่ชื่นชอบของผู้เล่นแต่ละคน"
+        }
+    }
 }
