--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -62,5 +62,32 @@
     "complete-how-to-play": "완전한 게임 방법",
     "dont-show-again": "다시 표시하지 않음",
     "streaming-error": "스트리밍 오류: 잘못된 스트리밍 URL",
-    "no-promotion": "현재 이벤트 없음"
+    "no-promotion": "현재 이벤트 없음",
+
+    "features-htp": {
+        "general": {
+            "title": "일반",
+            "content": {
+                "paragraph-1": "게임에 참여하려면 베팅을 커버할 충분한 잔액/자금이 필요합니다. 현재 잔액은 화면 왼쪽 하단에서 확인할 수 있습니다.",
+                "paragraph-2": "TOTAL BET 표시기는 현재 라운드에 배치한 베팅 총액을 보여줍니다.",
+                "paragraph-3": "테이블에서 허용되는 최소 및 최대 베팅 금액을 표시하며, 언제든지 변경될 수 있습니다. 또한 현재 기간의 고유 코드와 플레이 중인 게임 이름이 표시됩니다.",
+                "paragraph-4": "타이머는 베팅 가능한 남은 시간을 알려줍니다. 타이머 종료 후 베팅이 마감되며 추가 베팅은 접수되지 않습니다. 베팅 종료 후, 베팅이 유효한 경우 \"베팅 승인\" 메시지가 표시되며, 그렇지 않으면 \"일부 베팅 거부\" 또는 \"베팅 거부\" 알림을 받게 됩니다.",
+                "paragraph-5": "칩 디스플레이는 베팅할 칩의 가치를 선택하는 기능입니다. 화면 하단의 칩을 클릭하여 값 선택이 가능하며, Undo, Double, Rebet 버튼 근처에 위치합니다. 현재 잔액과 호환되는 칩 값만 선택할 수 있습니다."
+            }
+        },
+        "menu": {
+            "title": "메뉴",
+            "description": "게임 중 플레이어를 돕는 추가 버튼입니다.",
+            "content": {
+                "paragraph-1": "Undo 버튼은 테이블에 마지막으로 배치한 칩을 제거합니다.",
+                "paragraph-2": "배치한 칩의 총액을 두 배로 늘립니다. 계정 잔액이 두 배로 증가한 베팅을 커버할 수 있는지 확인하세요.",
+                "paragraph-3": "이전 라운드와 동일한 베팅을 반복할 수 있습니다.",
+                "paragraph-4": "Burger 메뉴는 게임 내 주요 기능 및 설정에 접근할 수 있게 합니다.",
+                "paragraph-5": "테이블에 배치한 칩을 숨깁니다.",
+                "paragraph-6": "진행 중인 게임 세션의 실시간 통계를 표시합니다.",
+                "paragraph-7": "Roadmap/게임 통계의 가시성을 전환합니다.",
+                "paragraph-8": "각 플레이어의 즐겨찾기 베팅을 저장하고 사용하는 데 사용됩니다."
+            }
+        }
+    }
 }
