--- a/src/locales/ko/m23.json
+++ b/src/locales/ko/m23.json
@@ -1,24 +1,24 @@
 {
-    "dragonpair": "dragon pair",
-    "tigerpair": "tiger pair",
-    "dragonwild": "dragon wild",
-    "tigerwild": "tiger wild",
-    "dragon": "dragon",
-    "tiger": "tiger",
+    "dragonpair": "드래곤 페어",
+    "tigerpair": "타이거 페어",
+    "dragonwild": "드래곤 wild",
+    "tigerwild": "타이거 wild",
+    "dragon": "드래곤",
     "wild": "wild",
     "superwild": "super wild",
-    "tie": "tie",
-    "big": "big",
-    "small": "small",
-    "odd": "odd",
-    "even": "even",
-    "red": "red",
-    "black": "black",
-    "wild bet": "Wild Bet",
-    "dragon wild": "dragon wild",
-    "tiger wild": "tiger wild",
+    "tie": "타이",
+    "tiger": "타이거",
+    "big": "큰",
+    "small": "작은",
+    "odd": "홀",
+    "even": "짝",
+    "red": "빨간",
+    "black": "검은",
+    "wild bet": "wild 베팅",
+    "dragon wild": "드래곤 wild",
+    "tiger wild": "타이거 wild",
     "super wild": "super wild",
-    "pair bet": "Pair Bet",
-    "dragon pair": "dragon pair",
-    "tiger pair": "tiger pair"
+    "pair bet": "페어 베팅",
+    "dragon pair": "드래곤 페어",
+    "tiger pair": "타이거 페어"
 }
