--- a/src/locales/vn/m23.json
+++ b/src/locales/vn/m23.json
@@ -1,24 +1,24 @@
 {
-    "dragonpair": "dragon pair",
-    "tigerpair": "tiger pair",
-    "dragonwild": "dragon wild",
-    "tigerwild": "tiger wild",
-    "dragon": "dragon",
-    "tiger": "tiger",
+    "dragonpair": "đôi rồng",
+    "tigerpair": "đôi hổ",
+    "dragonwild": "rồng wild",
+    "tigerwild": "hổ wild",
+    "dragon": "rồng",
     "wild": "wild",
     "superwild": "super wild",
-    "tie": "tie",
-    "big": "big",
-    "small": "small",
-    "odd": "odd",
-    "even": "even",
-    "red": "red",
-    "black": "black",
-    "wild bet": "Wild Bet",
-    "dragon wild": "dragon wild",
-    "tiger wild": "tiger wild",
+    "tie": "hòa",
+    "tiger": "hổ",
+    "big": "lớn",
+    "small": "nhỏ",
+    "odd": "lẻ",
+    "even": "chẵn",
+    "red": "đỏ",
+    "black": "đen",
+    "wild bet": "cược wild",
+    "dragon wild": "rồng wild",
+    "tiger wild": "hổ wild",
     "super wild": "super wild",
-    "pair bet": "Pair Bet",
-    "dragon pair": "dragon pair",
-    "tiger pair": "tiger pair"
+    "pair bet": "cược đôi",
+    "dragon pair": "đôi rồng",
+    "tiger pair": "đôi hổ"
 }
