--- a/src/locales/zh/m23.json
+++ b/src/locales/zh/m23.json
@@ -1,24 +1,24 @@
 {
-    "dragonpair": "dragon pair",
-    "tigerpair": "tiger pair",
-    "dragonwild": "dragon wild",
-    "tigerwild": "tiger wild",
-    "dragon": "dragon",
-    "tiger": "tiger",
+    "dragonpair": "龙对",
+    "tigerpair": "虎对",
+    "dragonwild": "龙 wild",
+    "tigerwild": "虎 wild",
+    "dragon": "龙",
     "wild": "wild",
     "superwild": "super wild",
-    "tie": "tie",
-    "big": "big",
-    "small": "small",
-    "odd": "odd",
-    "even": "even",
-    "red": "red",
-    "black": "black",
-    "wild bet": "Wild Bet",
-    "dragon wild": "dragon wild",
-    "tiger wild": "tiger wild",
+    "tie": "和",
+    "tiger": "虎",
+    "big": "大",
+    "small": "小",
+    "odd": "单",
+    "even": "双",
+    "red": "红",
+    "black": "黑",
+    "wild bet": "wild 投注",
+    "dragon wild": "龙 wild",
+    "tiger wild": "虎 wild",
     "super wild": "super wild",
-    "pair bet": "Pair Bet",
-    "dragon pair": "dragon pair",
-    "tiger pair": "tiger pair"
+    "pair bet": "对投注",
+    "dragon pair": "龙对",
+    "tiger pair": "虎对"
 }
