--- a/src/locales/hi/quick-htp.json
+++ b/src/locales/hi/quick-htp.json
@@ -1,22 +1,23 @@
 {
-    "p6b": {
+    "m23b": {
         "slide-1": {
             "title": "कैसे खेलें",
             "content": [
-                "<b>500x Jackpot & Lucky Number!</b> तक शानदार भुगतान बोनस जीतें!",
-                "घूमते पिंजरे में दिखाई देने वाली गेंद का अनुमान लगाकर खेलें। 1 से 24 तक की संख्याओं वाली 24 गेंदें लाल और काले रंग में हैं।"
+                "Dragon Tiger Wild नवीनतम <b>WILD CARD</b> बोनस के साथ आता है! <b>127x</b> तक बड़े पुरस्कार जीतने का अवसर पाएं! आपको बस उच्चतम कार्ड और wild कार्ड का अनुमान लगाना है बड़े पुरस्कारों के लिए! <b>LET’S GET WILD!!!</b>"
             ]
         },
         "slide-2": {
-            "title": "Lucky Numbers",
+            "title": "कैसे खेलें",
             "content": [
-                "सिस्टम बेतरतीब ढंग से 2 से 12 नंबरों को Lucky Numbers के रूप में चुनता है। Lucky Numbers में सामान्य भुगतान से ऊपर भुगतान में भारी वृद्धि होती है, जो आपके दांव की राशि के <b>30 गुना से 95 गुना</b> तक होती है।"
+                "यह खेल 3 कार्डों के साथ खेला जाता है। 2 मुख्य कार्ड (Dragon और Tiger) <b>यह देखने के लिए प्रतिस्पर्धा करेंगे कि किस पक्ष का मूल्य उच्चतम है</b>। 1 wild कार्ड <b>Bonus Wild संयोजन</b> बनाने के लिए निकाला जाता है।",
+                "आप मुख्य दांव पर दांव लगा सकते हैं: Dragon/Tiger। या wild दांव संयोजनों पर: Dragon Wild, Dragon Pair या Tiger Wild, Tiger Pair, और Super Wild।"
             ]
         },
         "slide-3": {
-            "title": "Jackpot Number",
+            "title": "Bonus Wild",
             "content": [
-                "सिस्टम बेतरतीब ढंग से <b>1 नंबर</b> को Jackpot Number के रूप में चुनता है। यह नंबर Lucky Number बोनस से परे भुगतान को महत्वपूर्ण रूप से बढ़ा सकता है, जो आपके दांव के <b>100 गुना से 500 गुना</b> तक होता है।"
+                "Wild कार्ड बोनस संयोजन बनाने के लिए है जो आपकी जीत को <b>127x</b> तक नाटकीय रूप से बढ़ा सकता है!",
+                "Wild दांव संयोजनों पर दांव लगाएं और <b>कई BONUS WILD पुरस्कारों</b> का अवसर प्राप्त करें!"
             ]
         }
     }
