--- a/src/locales/id/quick-htp.json
+++ b/src/locales/id/quick-htp.json
@@ -1,22 +1,23 @@
 {
-    "p6b": {
+    "m23b": {
         "slide-1": {
             "title": "Cara Bermain",
             "content": [
-                "Menangkan bonus pembayaran fantastis hingga <b>500x Jackpot & Lucky Number!</b>",
-                "Mainkan dengan cara menebak bola yang akan muncul pada sangkar berputar. Terdapat 24 bola terdiri dari angka 1 hingga 24 dengan warna merah dan hitam."
+                "Dragon Tiger Wild hadir dengan bonus <b>KARTU WILD</b> terbaru! Raih kesempatan menang yang lebih besar hingga <b>127x!</b> Anda hanya perlu menebak kartu tertinggi dan kartu wild untuk hadiah lebih besar! <b>LET’S GET WILD!!!</b>"
             ]
         },
         "slide-2": {
-            "title": "Lucky Numbers",
+            "title": "Cara Bermain",
             "content": [
-                "System secara acak memilih 2 hingga 12 angka sebagai Lucky Numbers. Lucky numbers memiliki peningkatan pembayaran drastis diatas bayaran normal, mulai dari <b>30x hingga 95x</b> nominal taruhan Anda."
+                "Permainan ini dimainkan dengan 3 kartu. 2 kartu utama (Dragon dan Tiger) <b>akan diadu sisi mana yang memiliki nilai tertinggi</b>. 1 kartu Wild dikeluarkan untuk membentuk <b>kombinasi Bonus Wild</b>.",
+                "Anda dapat bertaruh pada Taruhan Utama: Dragon/Tiger. Atau pada kombinasi Taruhan Wild: Dragon Wild, Dragon Pair atau Tiger Wild, Tiger Pair dan Super Wild"
             ]
         },
         "slide-3": {
-            "title": "Jackpot Number",
+            "title": "Bonus Wild",
             "content": [
-                "System secara acak memilih <b>1 angka</b> sebagai Jackpot Number. Angka ini dapat meningkatkan pembayaran secara signifikan melebihi Lucky Number Bonus, dimulai dari <b>100x hingga 500x</b> taruhan Anda."
+                "Kartu Wild hadir untuk membentuk kombinasi bonus yang dapat meningkatkan pembayaran kemenangan anda secara drastis <b>hingga 127x!</b>",
+                "Bertaruhlah pada kombinasi taruhan wild ,dan raih peluang <b>BONUS WILD berkali-kali lipat!</b>"
             ]
         }
     }
