--- a/src/locales/ko/quick-htp.json
+++ b/src/locales/ko/quick-htp.json
@@ -1,22 +1,23 @@
 {
-    "p6b": {
+    "m23b": {
         "slide-1": {
             "title": "게임 방법",
             "content": [
-                "최대 <b>500x Jackpot & Lucky Number!</b>까지 환상적인 보너스 지급을 받으세요!",
-                "회전하는 우리에 나타날 공을 추측하여 플레이하세요. 빨간색과 검은색으로 된 1부터 24까지의 숫자가 있는 24개의 공이 있습니다."
+                "Dragon Tiger Wild는 최신 <b>WILD CARD</b> 보너스와 함께 제공됩니다! <b>127x</b>까지 더 큰 상금을 획득할 기회를 잡으세요! 당신은 단지 가장 높은 카드와 wild 카드를 추측하여 더 큰 상금을 얻으면 됩니다! <b>LET’S GET WILD!!!</b>"
             ]
         },
         "slide-2": {
-            "title": "Lucky Numbers",
+            "title": "게임 방법",
             "content": [
-                "시스템은 무작위로 2에서 12개의 숫자를 Lucky Numbers로 선택합니다. Lucky Numbers는 일반 지급금보다 급격히 증가한 지급금을 가지며, 베팅 금액의 <b>30배에서 95배</b>까지입니다."
+                "이 게임은 3장의 카드로 진행됩니다. 2장의 메인 카드(Dragon과 Tiger)는 <b>어느 쪽이 더 높은 가치를 가지는지 경쟁합니다</b>. 1장의 wild 카드는 <b>Bonus Wild 조합</b>을 형성하기 위해 뽑힙니다.",
+                "당신은 메인 베팅: Dragon/Tiger에 베팅할 수 있습니다. 또는 wild 베팅 조합: Dragon Wild, Dragon Pair 또는 Tiger Wild, Tiger Pair, 그리고 Super Wild에 베팅할 수 있습니다."
             ]
         },
         "slide-3": {
-            "title": "Jackpot Number",
+            "title": "Bonus Wild",
             "content": [
-                "시스템은 무작위로 <b>1개의 숫자</b>를 Jackpot Number로 선택합니다. 이 숫자는 Lucky Number 보너스를 넘어서는 상당한 지급금 증가를 제공하며, 베팅 금액의 <b>100배에서 500배</b>까지입니다."
+                "Wild 카드는 당신의 상금을 <b>127x</b>까지 극적으로 증가시킬 수 있는 보너스 조합을 형성하기 위해 여기에 있습니다!",
+                "Wild 베팅 조합에 베팅하고 <b>여러 BONUS WILD 보상</b>의 기회를 잡으세요!"
             ]
         }
     }
