--- a/src/locales/th/m23.json
+++ b/src/locales/th/m23.json
@@ -1,24 +1,24 @@
 {
-    "dragonpair": "dragon pair",
-    "tigerpair": "tiger pair",
-    "dragonwild": "dragon wild",
-    "tigerwild": "tiger wild",
-    "dragon": "dragon",
-    "tiger": "tiger",
+    "dragonpair": "คู่มังกร",
+    "tigerpair": "คู่เสือ",
+    "dragonwild": "มังกร wild",
+    "tigerwild": "เสือ wild",
+    "dragon": "มังกร",
     "wild": "wild",
     "superwild": "super wild",
-    "tie": "tie",
-    "big": "big",
-    "small": "small",
-    "odd": "odd",
-    "even": "even",
-    "red": "red",
-    "black": "black",
-    "wild bet": "Wild Bet",
-    "dragon wild": "dragon wild",
-    "tiger wild": "tiger wild",
+    "tie": "เสมอ",
+    "tiger": "เสือ",
+    "big": "ใหญ่",
+    "small": "เล็ก",
+    "odd": "คี่",
+    "even": "คู่",
+    "red": "แดง",
+    "black": "ดำ",
+    "wild bet": "เดิมพัน wild",
+    "dragon wild": "มังกร wild",
+    "tiger wild": "เสือ wild",
     "super wild": "super wild",
-    "pair bet": "Pair Bet",
-    "dragon pair": "dragon pair",
-    "tiger pair": "tiger pair"
+    "pair bet": "เดิมพันคู่",
+    "dragon pair": "คู่มังกร",
+    "tiger pair": "คู่เสือ"
 }
