--- a/src/locales/th/quick-htp.json
+++ b/src/locales/th/quick-htp.json
@@ -1,22 +1,23 @@
 {
-    "p6b": {
+    "m23b": {
         "slide-1": {
-            "title": "วิธีเล่น",
+            "title": "วิธีการเล่น",
             "content": [
-                "ชนะโบนัสการจ่ายเงินที่ยอดเยี่ยมสูงสุดถึง <b>500x Jackpot & Lucky Number!</b>",
-                "เล่นโดยการทายลูกบอลที่จะปรากฏในกรงหมุน มีลูกบอล 24 ลูกที่มีตัวเลขตั้งแต่ 1 ถึง 24 ในสีแดงและดำ"
+                "Dragon Tiger Wild มาพร้อมกับโบนัส <b>WILD CARD</b> ล่าสุด! คว้าโอกาสในการชนะรางวัลใหญ่ขึ้นถึง <b>127x!</b> คุณเพียงแค่ต้องเดาการ์ดที่สูงที่สุดและ wild card เพื่อรับรางวัลที่ใหญ่กว่า! <b>LET’S GET WILD!!!</b>"
             ]
         },
         "slide-2": {
-            "title": "Lucky Numbers",
+            "title": "วิธีการเล่น",
             "content": [
-                "ระบบจะสุ่มเลือกตัวเลข 2 ถึง 12 ตัวเป็น Lucky Numbers. Lucky Numbers มีการเพิ่มการจ่ายเงินอย่างมากเหนือกว่าการจ่ายเงินปกติ เริ่มต้นที่ <b>30x ถึง 95x</b> ของจำนวนเงินเดิมพันของคุณ"
+                "เกมนี้เล่นด้วยการ์ด 3 ใบ การ์ดหลัก 2 ใบ (Dragon และ Tiger) <b>จะแข่งขันกันเพื่อดูว่าฝั่งใดมีค่าสูงสุด</b> การ์ด wild 1 ใบถูกดึงออกมาเพื่อสร้าง <b>ชุดผสม Bonus Wild</b>.",
+                "คุณสามารถเดิมพันในการเดิมพันหลัก: Dragon/Tiger หรือในการผสมการเดิมพัน wild: Dragon Wild, Dragon Pair หรือ Tiger Wild, Tiger Pair และ Super Wild."
             ]
         },
         "slide-3": {
-            "title": "Jackpot Number",
+            "title": "Bonus Wild",
             "content": [
-                "ระบบจะสุ่มเลือก <b>1 ตัวเลข</b> เป็น Jackpot Number. ตัวเลขนี้สามารถเพิ่มการจ่ายเงินอย่างมากเกินกว่าโบนัส Lucky Number เริ่มต้นที่ <b>100x ถึง 500x</b> ของการเดิมพันของคุณ"
+                "Wild card มาที่นี่เพื่อสร้างชุดผสมโบนัสที่สามารถเพิ่มการชนะของคุณอย่างมากถึง <b>127x!</b>",
+                "เดิมพันในการผสมการเดิมพัน wild และคว้าโอกาสในการได้รับ <b>รางวัล BONUS WILD หลายเท่า!</b>"
             ]
         }
     }
