--- a/src/locales/vn/quick-htp.json
+++ b/src/locales/vn/quick-htp.json
@@ -1,22 +1,23 @@
 {
-    "p6b": {
+    "m23b": {
         "slide-1": {
             "title": "Cách Chơi",
             "content": [
-                "Giành được tiền thưởng thanh toán tuyệt vời lên đến <b>500x Jackpot & Lucky Number!</b>",
-                "Chơi bằng cách đoán quả bóng sẽ xuất hiện trong lồng quay. Có 24 quả bóng được đánh số từ 1 đến 24 với màu đỏ và đen."
+                "Dragon Tiger Wild đi kèm với bonus <b>KARTU WILD</b> mới nhất! Hãy nắm bắt cơ hội giành chiến thắng lớn hơn lên đến <b>127x!</b> Bạn chỉ cần đoán lá bài cao nhất và lá bài wild để nhận phần thưởng lớn hơn! <b>LET’S GET WILD!!!</b>"
             ]
         },
         "slide-2": {
-            "title": "Lucky Numbers",
+            "title": "Cách Chơi",
             "content": [
-                "Hệ thống chọn ngẫu nhiên từ 2 đến 12 số làm Lucky Numbers. Lucky Numbers có mức tăng thanh toán đáng kể so với thanh toán thông thường, từ <b>30x đến 95x</b> số tiền cược của bạn."
+                "Trò chơi này được chơi với 3 lá bài. 2 lá bài chính (Dragon và Tiger) <b>sẽ so sánh bên nào có giá trị cao nhất</b>. 1 lá bài Wild được rút ra để tạo thành <b>kết hợp Bonus Wild</b>.",
+                "Bạn có thể đặt cược vào Cược Chính: Dragon/Tiger. Hoặc vào các kết hợp Cược Wild: Dragon Wild, Dragon Pair hoặc Tiger Wild, Tiger Pair và Super Wild."
             ]
         },
         "slide-3": {
-            "title": "Jackpot Number",
+            "title": "Bonus Wild",
             "content": [
-                "Hệ thống chọn ngẫu nhiên <b>1 số</b> làm Jackpot Number. Số này có thể làm tăng đáng kể thanh toán vượt qua Lucky Number Bonus, bắt đầu từ <b>100x đến 500x</b> số tiền cược của bạn."
+                "Kartu Wild có mặt để tạo thành các kết hợp bonus có thể tăng đáng kể số tiền thắng của bạn lên đến <b>127x!</b>",
+                "Hãy đặt cược vào các kết hợp cược wild và nắm bắt cơ hội nhận <b>phần thưởng BONUS WILD gấp nhiều lần!</b>"
             ]
         }
     }
